# PaperDemoAgent

./: .env.example  .gitignore  CONTRIBUTING.md  IMPROVEMENT_LOG.md  LICENSE  README.md  pyproject.toml  test_variations.py
examples/: demo_attention_paper.py  demo_imagenet_dataset.py  demo_survey_paper.py
paper_demo_agent/: __init__.py  agent.py  cli.py  config.py
paper_demo_agent/analysis/: __init__.py  analyzer.py
paper_demo_agent/generation/: __init__.py  generator.py  runner.py  tools.py
paper_demo_agent/graphics/: __init__.py  architecture_templates.py  chart_templates.py  mermaid_patterns.py  svg_primitives.py  themes.py  tikz_templates.py
paper_demo_agent/keys/: __init__.py  manager.py
paper_demo_agent/paper/: __init__.py  models.py  parser.py
paper_demo_agent/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  gemini_provider.py  minimax_provider.py  openai_provider.py
paper_demo_agent/skills/: __init__.py  algorithm_visualizer.py  base.py  blog_explainer.py  code_quality.py  data_explorer.py  findings_dashboard.py  flowchart_generator.py  framework_tutorial.py  general_qa.py  graphviz_diagram.py  model_inference.py  readme_generator.py  router.py  streamlit_demo.py  survey_dashboard.py  templates.py  theoretical_explainer.py
paper_demo_agent/ui/: __init__.py  app.py
scripts/: demo.tape  record_demo.py  take_animated_screenshots.py  take_screenshots.py
tests/: test_analyzer.py  test_code_quality.py  test_generator.py  test_graphics.py  test_parser.py  test_providers.py  test_skills.py  test_tools.py
