[project]
name = "paper-demo-agent"
version = "0.1.0"
description = "AI agent that reads any scientific paper and builds a live demo"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["ai", "agent", "papers", "demo", "llm", "gradio"]
authors = [
    {name = "Paper Demo Agent Contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.40.0",
    "google-generativeai>=0.7.0",
    "pymupdf>=1.24.0",
    "arxiv>=2.1.0",
    "httpx>=0.27.0",
    "huggingface-hub>=0.23.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "beautifulsoup4>=4.12.0",
    "gradio>=4.0.0",
    "ddgs>=9.0.0",
    "python-pptx>=1.0.0",
    "graphviz>=0.20.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock", "responses"]

[project.scripts]
paper-demo-agent = "paper_demo_agent.cli:cli"

[project.urls]
Homepage = "https://github.com/wshuai190/PaperDemoAgent"
Repository = "https://github.com/wshuai190/PaperDemoAgent"
Issues = "https://github.com/wshuai190/PaperDemoAgent/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
